--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.2",
     "stripe": "^14.21.0",
+    "micro": "^10.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
