--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.2",
-    "stripe": "^14.21.0",
-    "micro": "^10.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -17,7 +15,9 @@
     "@types/react-dom": "^19.1.6",
     "@types/react-pdf": "^6.2.0",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.525.0",
+    "micro": "^10.0.1",
     "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -26,6 +26,7 @@
     "react-pdf": "^10.0.1",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "stripe": "^14.21.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
